# genetic

./: CMakeLists.txt
app/: CMakeLists.txt
app/cli_app/: CMakeLists.txt
app/cli_app/src/: main.cpp
app/gui_app/: CMakeLists.txt
app/gui_app/include/: file_frames.hpp  genetic_app.hpp  genetic_controller.hpp  genetic_frame.hpp  plot.hpp  save_load.hpp  settings_frames.hpp  shared.hpp
app/gui_app/src/: file_frames.cpp  genetic_app.cpp  genetic_controller.cpp  genetic_frame.cpp  genetic_handlers.cpp  main.cpp  plot.cpp  settings_frames.cpp  shared.cpp
genetic_algo/: CMakeLists.txt
genetic_algo/include/: evolution.hpp  generator.hpp  mutation.hpp  recombination.hpp  selection.hpp  utils.hpp
genetic_algo/src/: evolution.cpp  generator.cpp  mutation.cpp  recombination.cpp  selection.cpp
include/: utils.hpp
